src/objects/Telematics_Program__c.object
<CustomObject>
    <fields>
        <fullName>Monthly_Subscription_Unit__c</fullName>
        <label>Monthly Subscription/Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Expiration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Telematics Programs</relationshipLabel>
        <relationshipName>Telematics_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AirIQ</fullName>
                </value>
                <value>
                    <fullName>DCS (Darby Corporate Solutions)</fullName>
                </value>
                <value>
                    <fullName>Discrete Wireless</fullName>
                </value>
                <value>
                    <fullName>Fleet Hawk</fullName>
                </value>
                <value>
                    <fullName>Fleetilla</fullName>
                </value>
                <value>
                    <fullName>Fleetmatics</fullName>
                </value>
                <value>
                    <fullName>GeoLogic Solutions</fullName>
                </value>
                <value>
                    <fullName>Geotab</fullName>
                </value>
                <value>
                    <fullName>GPS Insight</fullName>
                </value>
                <value>
                    <fullName>Navtrak</fullName>
                </value>
                <value>
                    <fullName>SageQuest</fullName>
                </value>
                <value>
                    <fullName>Teletrac</fullName>
                </value>
                <value>
                    <fullName>Telogis</fullName>
                </value>
                <value>
                    <fullName>Trimble/@Road</fullName>
                </value>
                <value>
                    <fullName>Vericom</fullName>
                </value>
                <value>
                    <fullName>Webtech Wireless</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>